--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "@apollo/server": "^4.11.3",
+    "express": "^4.21.2",
+    "graphql": "^16.10.0"
   }
 }
